[package]
name = "fc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ltptr = "0.1.4"
url = "2.3.1"
percent-encoding = "2.2.0"

[dependencies.windows]
version = "0.44.0"
features = [
  "Foundation",
  "System",
]
